--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     
 </head>
 <body>
+    <div class="header">
+        Click on the weapon of your choice:
+    </div>
     <div class="selections">
         <button class="selection" data-selection="rock">✊</button>
         <button class="selection" data-selection="paper">✋</button>
@@ -16,10 +19,10 @@
     </div>
     <div class="results">
         <div>You
-            <span class="result-score">0</span>
+            <span class="result-score" data-your-score>0</span>
         </div>
-        <div>Computer
-            <span class="result-score">0</span>
+        <div data-final-column>Computer
+            <span class="result-score" data-computer-score>0</span>
         </div>
         <!-- <div class="result-selection winner">✊</div>
         <div class="result-selection">✌</div> -->
